feat: add help button to quiz if the user gets at least one wrong answer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,5 +24,11 @@
             </intent-filter>
         </activity>
     </application>
+    <queries>
+        <package android:name="com.example.myapplication" />
+        <intent>
+            <action android:name="android.intent.action.WEB_SEARCH" />
+        </intent>
+    </queries>
 
 </manifest>
